Bug 430064 - cvs exports do not contain transaction id
Summary: cvs exports do not contain transaction id
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: exporter (other bugs)
Version First Reported In: 4.8.4
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-12-06 09:53 UTC by Ralf Habacker
Modified: 2020-12-06 15:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2020-12-06 09:53:26 UTC
To assign or track exported transactions, it is helpful to export the transactions id as well, which is currently not done

STEPS TO REPRODUCE
1. start kmymoney 
2. open kmymoney file 
3. export an account as csv

OBSERVED RESULT
The exported csv file does not contain the transaction id

EXPECTED RESULT
The exported csv file should contain the transaction id

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: openSUSE Leap 15.1
KDE Frameworks Version: 5.55
Qt Version: 5.9.7
Comment 1 Ralf Habacker 2020-12-06 09:55:21 UTC
Git commit 151828d836e81c6ced0b0088a3fc5ca0f8ababe3 by Ralf Habacker.
Committed on 06/12/2020 at 09:55.
Pushed by habacker into branch '4.8'.

cvswriter.cpp: export transaction id
FIXED-IN:4.8.5

M  +3    -1    kmymoney/plugins/csvexport/csvwriter.cpp

https://invent.kde.org/office/kmymoney/commit/151828d836e81c6ced0b0088a3fc5ca0f8ababe3
Comment 2 Ralf Habacker 2020-12-06 12:04:59 UTC
Git commit 4ab095adf5b07871ca2f59b3b31e88496203f30e by Ralf Habacker.
Committed on 06/12/2020 at 12:04.
Pushed by habacker into branch '4.8'.

Fixup for investment account type

M  +1    -1    kmymoney/plugins/csvexport/csvwriter.cpp

https://invent.kde.org/office/kmymoney/commit/4ab095adf5b07871ca2f59b3b31e88496203f30e