cvswriter.cpp: export transaction id

BUG:430064
FIXED-IN:4.8.5